--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,3 @@
 Django>2.0
 psycopg2-binary
-django-tables2
-django-tables2-reports
-#django-admin-tools
-#django-admintools-bootstrap
+django-import-export
