nettoyage du dossier

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # Ignored files
-voldb/__pycache__/*
-vol/__pycache__/*
-vol/migrations/*
-.idea/*
-images/*
-venv-windows/*
+voldb/__pycache__/
+vol/__pycache__/
+vol/migrations/
+.idea/
+images/
+venv-windows/
