--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,4 @@ dist: xenial
 language: python
 python: 3.7
 install: pip install -r requirements/base.txt
+script: python3 manage.py runserver 0.0.0.0:8000 --settings=voldb.settings.development
