--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,6 @@ env:
         - DJANGO=2.2.3 DB=mysql
 install: pip install -r requirements/base.txt
 before_script:
-        - mysql -e 'create dataabse test;' -u root
+        - mysql -e 'create database test;' -u root
 script: 
         - python3 manage.py test --settings=voldb.settings.development
