--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,6 @@ install: pip install -r requirements/base.txt
 before_script:
         - mysql -e 'create database test;' -u root
 script: 
+        - python3 manage.py make migrations vol --settings=voldb.settings.development
+        - python3 manage.py make migrate --settings=voldb.settings.development
         - python3 manage.py test --settings=voldb.settings.development
