--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ services:
         - mysql
 env:
         - DJANGO=2.2.3 DB=mysql
-install: pip install -r requirements/base.txt
+install: pip install -r requirements/development.txt
 before_script:
         - mysql -e 'create database voldb;' -u root
 script: 
